--- a/media-queries.css
+++ b/media-queries.css
@@ -1,36 +1,61 @@
 @media screen and (max-width: 420px) {
-    body {
-        display: flex;
-        flex-direction: column;
-    }
-
     .row {
         display: flex;
         flex-direction: column;
         align-items: center;
         background-color: white;
-        margin-top: 0;
+        margin: 0;
+        width: 100%;
+        gap: 10px;
     }
+
     #lezioni .row>.left,
     #lezioni .row>.right {
         float: none;
         background-color: wheat;
-        margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
     }
+
     #lezioni .row {
         background-color: wheat;
         margin: initial;
     }
+
     #steps .row>.left,
+    #steps .row>.central,
     #steps .row>.right {
         background-color: white;
-        margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        float: none;
     }
+
     #why .row,
     #why .row>.first,
     #why .row>.second,
     #why .row>.third {
         background-color: wheat;
         padding-bottom: 20px;
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
     }
 }
